@@ -16,17 +16,17 @@
  */
 package org.apache.jackrabbit.oak.osgi;
 
-import static java.lang.System.getenv;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assume.assumeTrue;
 import static org.ops4j.pax.exam.CoreOptions.bundle;
 import static org.ops4j.pax.exam.CoreOptions.frameworkProperty;
 import static org.ops4j.pax.exam.CoreOptions.junitBundles;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
 import static org.ops4j.pax.exam.CoreOptions.systemProperties;
+import static org.ops4j.pax.exam.CoreOptions.vmOption;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URI;
 import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 
@@ -49,6 +49,7 @@ import org.osgi.framework.Bundle;
 import org.osgi.framework.BundleContext;
 import org.osgi.framework.InvalidSyntaxException;
 import org.osgi.framework.ServiceReference;
+import org.osgi.framework.Version;
 
 @RunWith(PaxExam.class)
 @ExamReactorStrategy(PerClass.class)
@@ -58,13 +59,36 @@ public class OSGiIT {
     public Option[] configuration() throws IOException, URISyntaxException {
         return CoreOptions.options(
                 junitBundles(),
-                mavenBundle("org.apache.felix", "org.apache.felix.scr", "1.8.0"),
-                mavenBundle( "org.apache.felix", "org.apache.felix.configadmin", "1.4.0" ),
+                mavenBundle("org.apache.felix", "org.apache.felix.scr", "2.0.12"),
+                mavenBundle("org.osgi", "org.osgi.dto", "1.0.0"),
+                mavenBundle( "org.apache.felix", "org.apache.felix.configadmin", "1.8.16" ),
                 mavenBundle( "org.apache.felix", "org.apache.felix.fileinstall", "3.2.6" ),
                 mavenBundle( "org.ops4j.pax.logging", "pax-logging-api", "1.7.2" ),
                 frameworkProperty("repository.home").value("target"),
                 systemProperties(new SystemPropertyOption("felix.fileinstall.dir").value(getConfigDir())),
-                jarBundles());
+                jarBundles(),
+                jpmsOptions());
+    }
+
+    private Option jpmsOptions(){
+        DefaultCompositeOption composite = new DefaultCompositeOption();
+        if (Version.parseVersion(System.getProperty("java.specification.version")).getMajor() > 1){
+            if (java.nio.file.Files.exists(java.nio.file.FileSystems.getFileSystem(URI.create("jrt:/")).getPath("modules", "java.se.ee"))){
+                composite.add(vmOption("--add-modules=java.se.ee"));
+            }
+            composite.add(vmOption("--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.lang=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.io=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.net=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.nio=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.util=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.util.jar=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.util.regex=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/java.util.zip=ALL-UNNAMED"));
+            composite.add(vmOption("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"));
+        }
+        return composite;
     }
 
     private String getConfigDir(){
@@ -86,26 +110,18 @@ public class OSGiIT {
 
     @Test
     public void bundleStates() {
-        assumeTrue(!buildBotTrunkLinux());
         for (Bundle bundle : context.getBundles()) {
             assertEquals(
                 String.format("Bundle %s not active. have a look at the logs", bundle.toString()), 
                 Bundle.ACTIVE, bundle.getState());
         }
     }
-    
+
     @Test
     public void listBundles() {
-        assumeTrue(!buildBotTrunkLinux());  // FIXME OAK-2374: fails often on http://ci.apache.org/builders/oak-trunk.
         for (Bundle bundle : context.getBundles()) {
             System.out.println(bundle);
         }
-    }
-
-    // FIXME this is a copy of CIHelper.buildBotTrunkLinux() due to OSGi/Maven shortcomings. See OAK-2374
-    private static boolean buildBotTrunkLinux() {
-        String user = getenv("USER");
-        return user != null && user.startsWith("buildslave3");
     }
 
     @Test
